@@ -10,6 +10,10 @@ What's New in Python 3.2.2?
 Core and Builtins
 -----------------
 
+- Issue #12579: str.format_map() now raises a ValueError if used on a
+  format string that contains positional fields. Initial patch by
+  Julian Berman.
+
 - Issue #11627: Fix segfault when __new__ on a exception returns a non-exception
   class.
 
